--- a/templates/courses/event_detail.html
+++ b/templates/courses/event_detail.html
@@ -182,7 +182,7 @@
 				</div>
 			</div>
 
-            <div class="modal fade" id="ModalPrecios" tabindex="-1" aria-hidden="true"> <!-- Modal precios-->
+            <div class="modal fade" id="ModalPrecios" tabindex="-1" aria-hidden="true"> <!-- Modal precios -->
                 <div class="modal-dialog">
                 <div class="modal-content rounded-top">
                     <div class="modal-header bg-info">
@@ -192,10 +192,17 @@
                     <div class="modal-body">
                         <p class="text-muted font-weight-bold">
                             $ {{ event.reference_price }}
-                            
+                            {% for c in coin_info %} <!-- por cada moneda se imprime symbolo y valor del curso -->
+                            <br />    
+                                {{ c.symbol }} {{ c.event_reference_price_crypto }}  
+                            {% endfor %} 
                         </p>
                         <p> VALOR ACTUAL DE LAS MONEDAS MOSTRADAS: 
-                            
+                            <br>
+                            {% for c in coin_info %} <!-- por cada moneda se imprime imagen y valor actual en usd -->
+                                <img style="width: 1rem;height: 1rem;" src={{ c.image }} alt={{ c.symbol }}>
+                                <span>$ {{ c.current_price }}</span>
+                            {% endfor %}
                         </p>
                     </div>
                     <div class="modal-footer">
