# 54 modificar gas limit

--- a/templates/courses/send_cert_blockchain.html
+++ b/templates/courses/send_cert_blockchain.html
@@ -52,16 +52,13 @@
                       {{ certificate.event.owner.username }}
                   </textarea>
               </div>
-              <div class="form-group">
-                <input class="form-control" type="text" disabled value="{{ cert_hash.hexdigest }}">
-              </div>
+                  <div class="form-group">
+                    <input class="form-control" type="text" disabled value="{{ cert_hash.hexdigest }}">
+                  </div>
                   <div class="text-right">
-                  <button type="submit" class="btn btn-info text-right" id="connect_ethereum">
-                    Conectar a Ethereum
-                  </button>
-                  <button type="submit" class="btn btn-success text-right" id="send_transaction">
-                    Enviar Certificado
-                  </button>
+                      <button type="submit" class="btn btn-info text-right" id="connect_ethereum">
+                         Enviar certificado a Ethereum
+                      </button>
                   </div>
           </form>
       </div>
@@ -78,13 +75,6 @@
     <script>
     $( document ).ready(function() {
        $("#send_transaction").hide();
-       {#const infura_url = "https://ropsten.infura.io/v3/db26d321185243db9d29d384b55dba3c";#}
-       {#const web3 = new Web3(Web3.givenProvider);#}
-       {#console.log(web3);#}
-       {#const address = "0x0Fa50B058e9CCAb5AfD2337F0dF997801715a66e";#}
-       {#web3.eth.getBalance(address, (err, wei) => {#}
-       {#     balance = web3.utils.fromWei(wei, 'ether');#}
-       {#     console.log(balance);#}
 
        if (typeof window.ethereum !== 'undefined') {
          console.log('MetaMask is installed!');
@@ -106,30 +96,25 @@
        $("#connect_ethereum").on("click", function(e){
            e.preventDefault();
 
-           let accounts = []
-           let return_value = getAccount().then((result) => {
-               console.log("result:");
-               accounts = result
-               console.log("accounts[0]:")
-               console.log(accounts[0])
-               const transactionParameters = {
+           const transactionParameters = {
                    nonce: '0x00', // ignored by MetaMask
                    gasPrice: '0x09184e72a000', // customizable by user during MetaMask confirmation.
-                   gas: '0x2710', // customizable by user during MetaMask confirmation.
-                   to: '0x0000000000000000000000000000000000000000', // Required except during contract publications.
+                   gas: '0x0A410', // customizable by user during MetaMask confirmation.
+                   to: '0x0Fa50B058e9CCAb5AfD2337F0dF997801715a66e', // Required except during contract publications.
                    from: ethereum.selectedAddress, // must match user's active address.
                    value: '0x00', // Only required to send ether to the recipient from the initiating external account.
                    data: '0x7f7465737432000000000000000000000000000000000000000000000000000000600057', // Optional, but used for defining smart contract creation and interaction.
                    chainId: '0x3', // Used to prevent transaction reuse across blockchains. Auto-filled by MetaMask.
                };
+
+           let return_value = sendTransaction(transactionParameters).then((result) => {
                console.log(transactionParameters);
-               let sendTransactionResponse = sendTransaction(transactionParameters);
-               console.log(sendTransactionResponse)
+               console.log("result:");
+               console.log(result);
            }).catch((error) => {console.log(error)});
 
            console.log("return_value:");
            console.log(return_value);
-
 
        });
 
