--- a/static/assets/css/kidz.css
+++ b/static/assets/css/kidz.css
@@ -60,10 +60,11 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
-  line-height: 1.5;
+  /*line-height: 1.5;*/
   color: #212529;
   text-align: left;
   background-color: #fff;
+  padding: 0;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -12157,6 +12158,7 @@ a.text-stone:hover, a.text-stone:focus {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  margin: 0 !important;
 }
 
 /* Background Repeat */
@@ -17255,4 +17257,31 @@ html[dir="rtl"] .owl-nav i {
 
 html[dir="rtl"] .team-slider .card .card-img-wrapper .card-img-overlay .list-unstyled {
   padding-right: 0 !important;
+}
+
+
+.card_main {
+  height: 400px;
+}
+
+
+@media (max-width: 1200px) {
+  .card_main{
+    height: 430px;
+  }
+}
+.main_card_img {
+  height: 150px;
+}
+
+.modal_img_new {
+  width: 50px !important;
+}
+
+.media_body_modal {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding-top: 20px;
+  padding-left:15px;
 }
