--- a/templates/courses/events.html
+++ b/templates/courses/events.html
@@ -204,12 +204,12 @@
     <div class="row wow" style="visibility: visible">
         {% for event in events %}
           <div class="col-sm-6 col-lg-3 col-xs-12">
-            <div class="card">
+            <div class="card card_main">
               <a href="{% url 'event_detail' event.id %}" class="position-relative">
                   {% if event.image %}
-                    <img class="card-img-top" src="{{ event.image.url }}" alt="Card image">
+                    <img class="card-img-top main_card_img" src="{{ event.image.url }}" alt="Card image">
                   {% else %}
-                    <img class="card-img-top" src="https://picsum.photos/500" alt="Event Image">
+                    <img class="card-img-top main_card_img" src="https://picsum.photos/500" alt="Event Image">
                   {% endif %}
                 <div class="card-img-overlay">
 {#                  <span class="badge badge-warning badge-rounded-circle">$50</span>#}
